--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>  
     <main class="container">
         <section class="small-container">
-            <input class="player-field player-field-one" placeholder="Jogador 1">
+            <input class="player-field player-field-one" placeholder="Player One" value="Player One">
             <div class="box-player-field">
-                <input class="player-field-two" placeholder="Jogador 2">
+                <input class="player-field-two" placeholder="Player Two" value="Player Two">
                 <div class="switcher switcher-bot">
                     <div class="switcher-ball"></div>
                 </div>
@@ -36,7 +36,7 @@
                     <li class="match-history-scenery-wrapper">
                         <div class="match-history-winner-box">
                             <h4 class="winner-label">Vencedor</h4>
-                            <span class="winner-name">Jogador 1</span>
+                            <span class="winner-name">Player One</span>
                         </div>
                         <span class="match-history-separetor">Cenário</span>
                         <div class="scenary-box scenary-small">
@@ -103,45 +103,7 @@
         <section class="small-container">
             <h2 class="history-move-title">Histórico de Jogadas</h2>
             <ol class="history-card-list">
-                <li class="history-move-card">
-                    <span class="move-name">O</span>
-                    <div class="move-player-wrapper">
-                        <span class="move-player-name">Jogador 1</span>
-                        <span class="move-label">Primeiro quadrado</span>
-                    </div>
-                </li>
-
-                <li class="history-move-card">
-                    <span class="move-name">O</span>
-                    <div class="move-player-wrapper">
-                        <span class="move-player-name">Jogador 1</span>
-                        <span class="move-label">Primeiro quadrado</span>
-                    </div>
-                </li>
-
-                <li class="history-move-card">
-                    <span class="move-name">O</span>
-                    <div class="move-player-wrapper">
-                        <span class="move-player-name">Jogador 1</span>
-                        <span class="move-label">Primeiro quadrado</span>
-                    </div>
-                </li>
-
-                <li class="history-move-card">
-                    <span class="move-name">O</span>
-                    <div class="move-player-wrapper">
-                        <span class="move-player-name">Jogador 1</span>
-                        <span class="move-label">Primeiro quadrado</span>
-                    </div>
-                </li>
-                
-                <li class="history-move-card">
-                    <span class="move-name">O</span>
-                    <div class="move-player-wrapper">
-                        <span class="move-player-name">Jogador 1</span>
-                        <span class="move-label">Primeiro quadrado</span>
-                    </div>
-                </li>
+               
             </ol>
         </section>
     </main>
